[gd_scene load_steps=2 format=3 uid="uid://dse4vqxi4oyqa"]

[ext_resource type="Script" uid="uid://d20dokr0ggi0k" path="res://scenes/ui/map_select.gd" id="1_ajqti"]

[node name="MapSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ajqti")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CityButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "City"

[node name="ForestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Forest (TBD)"

[node name="DesertButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Desert (TBD)"

[node name="MountainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mountain (TBD)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"
